# noblit

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md  build  default.nix  example.py  example2.query  flake.nix  index.html  mkdocs.yml  nixpkgs-pinned.nix  sitemap.xml
README.theme/: index.html
architecture/: index.html
building/: index.html
client/cli/: parser.py
client/haskell/: noblit.cabal  stack.yaml
client/haskell/src/Database/: Noblit.hs
client/haskell/src/Database/Noblit/: Builtins.hs  Primitive.hs  Query.hs  Schema.hs
client/python/: noblit.py
data-model/: index.html
distributed-operation/: index.html
doc/: btree.md  disk-format.md  htree.md
docs/: architecture.md  building.md  data-model.md  distributed-operation.md  distribution.md  execution.md  files.md  fuzz-tests.md  golden-tests.md  htree.md  index.md  query-optimization.md  query-planning.md  query.md  resources.md
docs/examples/: bug-tracker.md  key-value-lookup.md
docs/reference/: c.md  rust.md
examples/: BugTracker.hs  examples.cabal  film.hs  stack.yaml
examples/bug-tracker/: index.html
examples/haveibeenpwned/: Cargo.toml
examples/haveibeenpwned/src/: main.rs
examples/key-value-lookup/: index.html
execution/: index.html
files/: index.html
fuzz/: .gitignore  Cargo.toml
fuzz-tests/: index.html
fuzz/fuzz_targets/: htree_insert.rs  htree_insert_entity.rs  htree_insert_value.rs
golden/: README.md  bug_tracker.t  builtin_attributes.t  builtin_types.t  define_attributes.t  explain.t  film.t  parse.py  run.py  segment.py
golden-tests/: index.html
htree/: index.html
ideas/: example.query  example2.query  example3.query  macros.cpp  macros.m4  macros.roff
kv/: Cargo.toml  IDEAS.md  IDEAS_02.md
kv/src/: lib.rs  main.rs
libnoblit/: Cargo.toml  check_symbols.py  gen_header.py  noblit.h
libnoblit/src/: lib.rs  mono.rs
noblit/: Cargo.toml
noblit/src/: binary.rs  database.rs  datom.rs  disk.rs  error.rs  eval.rs  heap.rs  htree.rs  index.rs  lib.rs  memory_store.rs  mmap.rs  mmap_store.rs  parse.rs  plan.rs  planner.rs  query.rs  query_plan.rs  store.rs
noblit/src/fuzz/: htree_insert_entity.rs  htree_insert_value.rs
query/: index.html
query-optimization/: index.html
query-planning/: index.html
reference/c/: index.html
reference/rust/: index.html
resources/: index.html
search/: search_index.json
src/: binary.rs  database.rs  datom.rs  disk.rs  eval.rs  head.rs  heap.rs  htree.rs  idgen.rs  index.rs  lib.rs  main.rs  memory_store.rs  mutation.rs  parse.rs  permutation.rs  plan.rs  planner.rs  pool.rs  query.rs  query_plan.rs  stack_pool.rs  store.rs  temp_heap.rs  types.rs
src/fuzz/: htree_insert.rs  htree_insert_entity.rs  htree_insert_value.rs  mod.rs  util.rs
theme/: index.html  main.html  nav.html
theme/README.theme/: index.html
tools/: check_symbols.py  gen_header.py  pack_corpus.py  run_build.py
tools/fuzzpack/: Cargo.toml
tools/fuzzpack/src/: main.rs
