[package]
name = "noblit-fuzz"
version = "0.0.0"
authors = ["Ruud van Asseldonk"]
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
noblit = { path = ".." }
libfuzzer-sys = "0.3.0"

# Prevent this from interfering with workspaces.
[workspace]
members = ["."]

[[bin]]
name = "htree_insert_entity"
path = "fuzz_targets/htree_insert_entity.rs"

[[bin]]
name = "htree_insert_value"
path = "fuzz_targets/htree_insert_value.rs"
