[package]
name = "libnoblit"
version = "0.0.0"
authors = ["Ruud van Asseldonk <dev@veniogames.com>"]

[dependencies]
noblit = { path = "../noblit" }

[lib]
# Build a C dynamic and static library.
crate-type = ["cdylib", "staticlib"]
name = "noblit"

# Because this crate is called "noblit" just like the Rust crate (in order to
# make the output files "libnoblit.so" and "libnoblit.a"), the docs conflict.
# But API docs for the C API should be handled elsewhere either way, so that is
# not a problem.
doc = false

# The unwind panics are unsafe across FFI boundaries, so make panics abort the
# process instead. Panics are for unrecoverable errors anyway.
panic = "abort"
